finished documenting the LIME R package in journal 02

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 - Graphics Group
     - email list
+    - what should we do about gganimate/Halloween?
 
 ## To Do List
 
@@ -23,9 +24,6 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 **Current**
 
-- go back through LIME procedure and update with new understanding (such as d' can be larger than d)
-- add an assert_that statement in the code to check if the LIME package is changing
-- point out differences and similarities from the other paper (such as normal sampling)
 - code up Laugel et al's work
 - read through papers giving an overview of the current explanation methods
 - check to see if there a paper showing how ridge regression is affected by sample size changes
