updated to do list

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,10 +29,10 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 **Current**
 
-- finish going through code with the explain function
-- write procedure section of LIME paper
-- draft the rest of the paper
-- read through papers giving an overview of the current explanation methods
+- draft methods section of the paper
+- draft data example section of paper
+- draft discussion section of paper
+- draft appendices
 
 **Oral Prelim**
 
@@ -75,6 +75,7 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
     - try visualizing the features from the test data using dimension reduction and
   coloring them by variables suggested to be important by lime
 - explainer models
+    - read through papers giving an overview of the current explanation methods
     - look into iml (https://www.youtube.com/watch?v=jP6Rg13PEkQ)
     - look more into Molnar and his adviser Bernd
     - look into [MAPLE](https://blog.ml.cmu.edu/2019/07/13/towards-interpretable-tree-ensembles/)
