--- a/README.Rmd
+++ b/README.Rmd
@@ -100,6 +100,8 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 - random forests confidence intervals
     - look into papers by Giles Hooker and Lucas Mentch
     - Dr. Nettleton paper
+- random forest interpretations
+    - read https://www.r-bloggers.com/explaining-predictions-random-forest-post-hoc-analysis-randomforestexplainer-package/
 
 ## Contents
 
