--- a/journals/04-assessing_lime/04-assessing_lime.Rmd
+++ b/journals/04-assessing_lime/04-assessing_lime.Rmd
@@ -7,6 +7,8 @@ output:
     toc: true
     toc_depth: 3
     toc_float: true
+    theme: cerulean
+    highlight: textmate
 ---
 
 ```{r setup, include = FALSE}
